--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -18,6 +18,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(241, 241, 241);
+  list-style-type: none;
 }
 
 code {
